# GenAI-Detect

./: Dockerfile  README.md  arc3-gptoss-acontext-memory.ipynb  predict.py  pyproject.toml  requirements.txt
arc-prize-2026-arc-agi-3/arc_agi_3_wheels/: arc_agi-0.9.6-py3-none-any.whl
examples/: NOTEBOOK_MIGRATION.md  kaggle_arc_agi3_agent.py
reports/: arc_public_env_summary.json  arc_public_env_summary.md
src/: predict.py  train_deberta.py  train_tfidf.py  utils.py
src/acontext/: __init__.py  arc_public_envs.py  client.py  models.py  storage.py
src/acontext/integrations/: __init__.py  arc_agi3.py
src/acontext/resources/: __init__.py  learning_spaces.py  sessions.py  skills.py
tests/: test_arc_public_envs.py  test_smoke.py
